# keychain-interpose

./: .editorconfig  .gitignore  .gitmodules  .shellcheckrc  CMakeLists.txt  Makefile  README.md  agent.sh  build-x64.sh  run-test.sh
gpg-agent/: entitlements.plist
src/: biometric-auth.mm  common.cpp  encapsulate-app.cpp  keychain-interpose.cpp  log.cpp  migrate-keys-helper.mm  migrate-keys.cpp  open-script.mm  pinentry-wrapper.cpp
src/headers/apple/: dyld-interposing.h
src/include/: common.h  keychain-interpose.h  log.h
src/meta/: Info.plist.m4  codesign.sh  download-source.sh  entitlements.plist.m4  github-release.md.m4  gpg-agent-entitlements.plist.m4  install-app.sh  make-bundle.sh  make-universal.sh  make-x64.sh  migrate-keys-entitlements.plist.m4  notarize-app.sh  notarize-save-profile.sh  print-compiler.sh  upload-to-github.sh
src/meta/brew/: env.sh  install.sh  wrapper.sh
src/meta/cmake/: toolchain.cmake
src/meta/profiles/: development-keychain-interpose-migrate-keys.provisionprofile  keychain-interpose-gpg-agent.provisionprofile  keychain-interpose-migrate-keys.provisionprofile  keychain-interpose.provisionprofile  keychain-interpose.provisionprofile.base64
src/modules/: cathyjf.ki.common.cppm  cathyjf.ki.log.cppm  cathyjf.ki.migrate_keys.cppm
src/resources/: gpg-keychain-agent.sh  help-message.sh
testing/: agent.sh  migrate-keys  pinentry-wrapper  run-test.sh
